--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               }
             ],
             "styles": ["src/styles.css"],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "/easy-track/"
           },
           "configurations": {
             "production": {
