--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "easyTrack": {
+    "easyTrackWithModules": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -29,7 +29,7 @@
             ],
             "styles": ["src/styles.css"],
             "scripts": [],
-            "baseHref": "/easy-track/"
+            "baseHref": "/easy-track-with-modules/"
           },
           "configurations": {
             "production": {
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "easyTrack:build:production"
+              "buildTarget": "easyTrackWithModules:build:production"
             },
             "development": {
-              "buildTarget": "easyTrack:build:development"
+              "buildTarget": "easyTrackWithModules:build:development"
             }
           },
           "defaultConfiguration": "development"
